--- a/mola-fe/src/index.css
+++ b/mola-fe/src/index.css
@@ -1,10 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Mulish&family=Quicksand:wght@300;400;500;600;700&display=swap'); */
 
 /* base styles */
 
 body {
 	margin: 0;
 	font-family: "Quicksand";
+	/* font-family: 'Mulish', sans-serif; */
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 }
